--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
     </section>
     <aside>
-      Asetukset
+      <div id="data">
+      </div>
     </aside>
   </div>
+
 
 <script src="script.js">
 </script>
