--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
       <nav>
         <ul>
-    <li><a class="active" href="#home">Home</a></li>
+          <li><a class="active" href="./">Home</a></li>
 
-    <li><a href="#about">About</a></li>
+          <li><a  href="about.html">About Us</a></li>
   </ul>
     </nav>
     </header>
