--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <nav>
+        <a class="active" href="./"><h1>Opiskelijaravintolat</h1></a>
         <ul>
           <li><a class="active" href="./">Home</a></li>
 
