--- a/about.html
+++ b/about.html
@@ -13,10 +13,11 @@
 <body>
 <header>
     <nav>
+        <a class="active" href="./"><h1>Opiskelijaravintolat</h1></a>
         <ul>
-            <li><a  href="./">Home</a></li>
+            <li><a class="active" href="./">Home</a></li>
 
-            <li><a class="active" href="about.html">About Us</a></li>
+            <li><a  href="about.html">About Us</a></li>
         </ul>
     </nav>
 </header>
