--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>Karttasivu</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans|Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9aa29b168b.js" crossorigin="anonymous"></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.css' rel='stylesheet' />
@@ -24,10 +23,10 @@
     </nav>
     </header>
     <div class="flex">
-    <section>
+    <div class="container">
       <div id='map'></div>
 
-    </section>
+    </div>
     <aside>
       <div id="data">
       </div>
