--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
     </nav>
 </header>
 <div class="flex">
-    <section>
+    <div class="container">
         <div></div>
 
-    </section>
+    </div>
     <aside>
         <div id="data">
         </div>
