Added logo an photos. Also styling much goodi

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav>
-        <a class="active" href="./"><h1>Opiskelijaravintolat</h1></a>
+        <a class="active" href="./"><h1><img src="logo.png" alt="logo" width="140px"/></h1></a>
         <ul>
             <li><a class="active" href="./">Home</a></li>
 
@@ -22,13 +22,13 @@
 </header>
 <div class="flex">
     <div class="container">
-        <div></div>
+        <div>
+            <img src="DSC03896.jpg" alt="Omar Benchbana" width="250px"/>
+            <img src="DSC03912.jpg" alt="Andrei Hakala" width="250px"/>
+        </div>
 
     </div>
-    <aside>
-        <div id="data">
-        </div>
-    </aside>
+
 </div>
 
 </body>
