--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <a class="active" href="./"><h1>Opiskelijaravintolat</h1></a>
+        <a class="active" href="./"><h1><img src="logo.png" alt="logo" width="140px"/></h1></a>
         <ul>
           <li><a class="active" href="./">Home</a></li>
 
