--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>About Us</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
     <script src="https://kit.fontawesome.com/9aa29b168b.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -25,11 +28,14 @@
         <div>
             <img src="DSC03896.jpg" alt="Omar Benchbana" width="200px"/>
             <img src="DSC03912.jpg" alt="Andrei Hakala" width="200px"/>
-        </div>
 
+        </div>
     </div>
 
 </div>
+<div class="svg"></div>
 
+<script src="about.js">
+</script>
 </body>
 </html>
