--- a/about.html
+++ b/about.html
@@ -24,11 +24,18 @@
         </ul>
     </nav>
 </header>
-<div class="flex">
-    <div class="container">
-        <div>
-            <img src="DSC03896.jpg" alt="Omar Benchbana" width="200px"/>
-            <img src="DSC03912.jpg" alt="Andrei Hakala" width="200px"/>
+
+        <div class="grid-container">
+          <div class="grid-item1">
+            <img class="grid-pic" src="DSC03896.jpg" alt="Omar Benchbana" width="50%;"/>
+
+          </div>
+            <div class="grid-item2">
+              <img class="grid-pic" src="DSC03912.jpg" alt="Andrei Hakala" width="50%;"/>
+
+            </div>
+          </div>
+          <div class="video">
             <video id='my-video' class='video-js' controls preload='metadata' width="1920px"
 poster='banner.jpg' data-setup='{}'>
   <source src='video.mp4' type='video/mp4'>
@@ -38,13 +45,8 @@ poster='banner.jpg' data-setup='{}'>
   </p>
 </video>
         </div>
-    </div>
 
-</div>
-<div class="svg"></div>
 
-<script src="about.js">
-</script>
 
 </body>
 </html>
