--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Karttasivu</title>
+    <meta name="description" content="Our map application that searches restaurants in the capital region of finland">
+
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9aa29b168b.js" crossorigin="anonymous"></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.js'></script>
