--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>About Us</title>
+    <meta name="description" content="About us page of our project containing images and a video">
 
     <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v4.js"></script>
