--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ poster='banner.jpg' data-setup='{}'>
   <source src='video.mp4' type='video/mp4'>
   <p class='vjs-no-js'>
     To view this video please enable JavaScript, and consider upgrading to a web browser that
-    <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
+    <a rel="noopener" href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
   </p>
 </video>
         </div>
