--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Karttasivu</title>
-    <meta name="description" content="Our map application that searches restaurants in the capital region of finland">
+    <meta name="description" content="Our map application that searches student restaurants in the capital region of Finland">
 
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9aa29b168b.js" crossorigin="anonymous"></script>
