--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <nav>
-        <a class="active" href="./"><h1><img src="logo.png" alt="logo" width="140px"/></h1></a>
+        <a class="active" href="./"><h1><img src="logo.png" alt="logo"  style="width:140px"></h1></a>
         <ul>
             <li><a class="active" href="./">Home</a></li>
 
@@ -26,16 +26,16 @@
 
         <div class="grid-container">
           <div class="grid-item1">
-            <img class="grid-pic" src="DSC03896.jpg" alt="Omar Benchbana" width="50%;"/>
+            <img class="grid-pic" src="DSC03896.jpg" alt="Omar Benchbana" style="width:50%"/>
 
           </div>
             <div class="grid-item2">
-              <img class="grid-pic" src="DSC03912.jpg" alt="Andrei Hakala" width="50%;"/>
+              <img class="grid-pic" src="DSC03912.jpg" alt="Andrei Hakala"  style="width:50%"/>
 
             </div>
           </div>
           <div class="video">
-            <video id='my-video' class='video-js' controls preload='metadata' width="1920px"
+            <video id='my-video' class='video-js' controls preload='metadata'  style="width:1920px"
 poster='banner.jpg' data-setup='{}'>
   <source src='video.mp4' type='video/mp4'>
   <p class='vjs-no-js'>
