--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="video">
-            <video id='my-video' class='video-js' controls preload='metadata'  style="width:1920px"
+            <video id='my-video' class='video-js' controls preload='metadata' 
 poster='banner.jpg' data-setup='{}'>
   <source src='video.mp4' type='video/mp4'>
   <p class='vjs-no-js'>
