--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@
 
         <div class="grid-container">
           <div class="grid-item1">
-            <img class="grid-pic" src="DSC03896.jpg" alt="Omar Benchbana" style="width:50%"/>
+            <img class="grid-pic" src="DSC03896.jpg" alt="Omar Benchbana"/>
 
           </div>
             <div class="grid-item2">
-              <img class="grid-pic" src="DSC03912.jpg" alt="Andrei Hakala"  style="width:50%"/>
+              <img class="grid-pic" src="DSC03912.jpg" alt="Andrei Hakala"  />
 
             </div>
           </div>
           <div class="video">
-            <video id='my-video' class='video-js' controls preload='metadata' 
+            <video id='my-video' class='video-js' controls preload='metadata'
 poster='banner.jpg' data-setup='{}'>
   <source src='video.mp4' type='video/mp4'>
   <p class='vjs-no-js'>
